--- a/dd/css/404.css
+++ b/dd/css/404.css
@@ -1,392 +1,1 @@
-@charset "UTF-8";
-body {
-  font: 16px/1.5 "Hiragino Sans GB", "Helvetica Neue", Helvetica, "Microsoft Yahei", heiti, Arial, sans-serif;
-  color: #14191e;
-  position: relative; }
-
-body, div, p, ul, li, form, input, h1, h2, h3, h4, h5, h6, table, dl, dd, textarea, ol {
-  margin: 0;
-  padding: 0; }
-
-ul, li {
-  list-style: none; }
-
-img {
-  vertical-align: middle;
-  border: none;
-  display: inline-block; }
-
-a {
-  text-decoration: none;
-  border: none; }
-
-input {
-  outline: none;
-  border: none; }
-
-input::-webkit-input-placeholder {
-  /* WebKit browsers */
-  font-size: 16px;
-  font-family: "Hiragino Sans GB", "Helvetica Neue", Helvetica, "Microsoft Yahei", heiti, Arial, sans-serif;
-  line-height: 20px;
-  /* for non-ie */ }
-
-input:-moz-placeholder {
-  /* Mozilla Firefox 4 to 18 */
-  font-size: 16px;
-  font-family: "Hiragino Sans GB", "Helvetica Neue", Helvetica, "Microsoft Yahei", heiti, Arial, sans-serif;
-  line-height: 19px;
-  /* for non-ie */ }
-
-input::-moz-placeholder {
-  /* Mozilla Firefox 19+ */
-  font-size: 16px;
-  font-family: "Hiragino Sans GB", "Helvetica Neue", Helvetica, "Microsoft Yahei", heiti, Arial, sans-serif;
-  line-height: 19px;
-  /* for non-ie */ }
-
-input:-ms-input-placeholder {
-  /* Internet Explorer 10+ */
-  font-size: 16px;
-  font-family: "Hiragino Sans GB", "Helvetica Neue", Helvetica, "Microsoft Yahei", heiti, Arial, sans-serif;
-  line-height: normal;
-  /* for non-ie */ }
-
-.clearfix:after {
-  content: "";
-  display: table;
-  clear: both; }
-
-.f-l {
-  float: left; }
-
-.f-r {
-  float: right; }
-
-.disnone {
-  display: none; }
-
-.disblk {
-  display: block; }
-
-@media (min-width: 0px) {
-  .loading {
-    position: relative; }
-  .loading:after {
-    content: "";
-    position: absolute;
-    display: inline-block;
-    width: 20px;
-    height: 20px;
-    border: 2px #ccc solid;
-    border-left: 2px red solid;
-    left: 50%;
-    top: 50%;
-    margin: -12px 0 0 -12px;
-    border-radius: 50%;
-    z-index: -1;
-    -webkit-animation: loading 0.7s linear infinite;
-    animation: loading 0.7s linear infinite;
-    display: none\9\0; } }
-
-@-webkit-keyframes loading {
-  from {
-    -webkit-transform: rotate(0); }
-  to {
-    -webkit-transform: rotate(359deg); } }
-
-@keyframes loading {
-  from {
-    -webkit-transform: rotate(0);
-            transform: rotate(0); }
-  to {
-    -webkit-transform: rotate(359deg);
-            transform: rotate(359deg); } }
-
-.mask {
-  background: #000;
-  filter: alpha(opacity=50);
-  opacity: .5;
-  position: absolute;
-  z-index: 9999999;
-  width: 100%;
-  min-height: 100%;
-  left: 0;
-  top: 0; }
-
-.login-box {
-  position: absolute;
-  border-radius: 3px;
-  width: 800px;
-  background: #fff;
-  z-index: 10000000;
-  left: 50%;
-  top: -401px;
-  margin-left: -400px;
-  height: 400px; }
-
-.login-title-p {
-  text-align: center;
-  border-bottom: 1px solid #eee;
-  line-height: 60px;
-  height: 60px;
-  font-size: 16px; }
-
-.login-close {
-  position: absolute;
-  height: 24px;
-  width: 24px;
-  background: url(../images/close.png) center center no-repeat;
-  top: 24px;
-  right: 30px;
-  -webkit-transition: .3s;
-          transition: .3s; }
-
-.login-method-container {
-  height: 340px;
-  background: #fff;
-  position: absolute;
-  width: 100%; }
-
-.login-close:hover {
-  -webkit-transform: rotate(180deg);
-      -ms-transform: rotate(180deg);
-          transform: rotate(180deg); }
-
-.login-method {
-  position: absolute;
-  top: 40px; }
-
-.left {
-  left: 125px; }
-
-.right {
-  right: 125px; }
-
-.login-method p {
-  margin-top: 20px;
-  text-align: center;
-  color: #999; }
-
-::-moz-selection {
-  background: #ff0014;
-  color: #fff; }
-
-::-webkit-selection {
-  background: #ff0014;
-  color: #fff; }
-
-::selection {
-  background: #ff0014;
-  color: #fff; }
-
-.header-box ul.login {
-  visibility: hidden; }
-
-html {
-  height: 100%; }
-
-body {
-  background: #FBFBFB;
-  min-height: 100%; }
-
-@media (min-width: 0px) {
-  .search-input {
-    font-family: "Hiragino Sans GB", "Helvetica Neue", Helvetica, "Microsoft Yahei", heiti, Arial, sans-serif;
-    padding: 10px 37px 10px 7px;
-    font-size: 16px;
-    height: 18px;
-    line-height: 18px;
-    width: 500px;
-    -ms-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
-    -o-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
-    display: inline-block; } }
-
-.wrapper {
-  /*确定高度的最小值。防止页面缩放时底部出现空白*/
-  min-height: 100%;
-  width: 100%;
-  position: relative; }
-
-.header {
-  /*for IE8-*/
-  background: rgba(0, 0, 0, 0.8);
-  height: 50px;
-  text-align: center;
-  line-height: 50px;
-  min-width: 1200px; }
-
-@media \0screen\,screen\9 {
-  .header {
-    background: #000;
-    filter: alpha(opacity=80); } }
-
-.header a {
-  color: #fff;
-  display: block;
-  width: 100%;
-  height: 100%;
-  font-size: 14px; }
-
-.index, .category, .down-app {
-  width: 80px;
-  height: 48px; }
-
-li.current-page:hover {
-  background-color: #363c41;
-  height: 48px;
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out; }
-
-.index:hover, .category:hover, .down-app:hover, .login:hover {
-  background-color: #363c41;
-  height: 50px;
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out; }
-
-.header-box li.category, .header-box li.down-app {
-  margin-left: 0; }
-
-.down-app {
-  width: 80px;
-  padding-left: 15px;
-  position: relative; }
-
-.header-app-icon {
-  position: absolute;
-  left: 7px;
-  top: 17px;
-  display: inline-block;
-  width: 11px;
-  height: 16px;
-  background: url(../images/head-app-icon.png) no-repeat 0 0;
-  vertical-align: -3px;
-  transition: .3s;
-  -moz-transition: .3s;
-  -webkit-transition: .3s;
-  -o-transition: .3s; }
-
-.down-app:hover .header-app-icon {
-  background: url(../images/head-app-icon.png) no-repeat 0 -16px; }
-
-.current-page {
-  border-bottom: 2px #e60012 solid;
-  background: black; }
-
-.header-box {
-  width: 1200px;
-  margin: 0 auto;
-  height: 100%; }
-
-.header-box .f-l {
-  margin-left: 10px; }
-
-.login {
-  position: relative;
-  width: 110px;
-  height: 100%; }
-
-.login-title {
-  position: absolute;
-  left: 10px; }
-
-.login .face {
-  padding-top: 12px;
-  margin-right: 10px;
-  position: absolute;
-  right: 20px; }
-  .login .face a {
-    width: 26px;
-    height: 26px;
-    border-radius: 50%;
-    background: url(../images/def-user.png) center center no-repeat;
-    background-size: 26px 26px; }
-
-.login:hover .person-state-list {
-  filter: alpha(opacity=100);
-  opacity: 1; }
-
-.login:hover .person-state-list-container, .person-state-list {
-  display: block;
-  filter: alpha(opacity=100);
-  opacity: 1; }
-
-.person-state-list-container {
-  position: absolute;
-  top: 50px;
-  left: 0;
-  background-color: #363c41;
-  width: 110px;
-  height: 60px;
-  display: none; }
-
-.person-state-list {
-  position: absolute;
-  z-index: 3;
-  height: 100%;
-  width: 100%;
-  line-height: 30px;
-  font-size: 12px;
-  filter: alpha(opacity=0);
-  opacity: 0;
-  -webkit-transition: all 0.4s ease-in-out;
-  transition: all 0.4s ease-in-out; }
-  .person-state-list li {
-    text-align: center;
-    height: 30px; }
-  .person-state-list li:hover a {
-    background: black; }
-
-.search-area {
-  margin-top: 100px; }
-
-.search-box {
-  width: 620px;
-  margin: 0 auto; }
-
-.search-form {
-  text-align: center;
-  position: relative; }
-
-.btn {
-  position: absolute;
-  height: 36px;
-  width: 36px;
-  right: 2px;
-  top: 2px;
-  border-radius: 3px;
-  background: url(../images/search.png) center center no-repeat #e60012;
-  background-size: 20px 20px;
-  cursor: pointer; }
-
-.search-input {
-  padding: 10px 37px 10px 7px;
-  height: 18px;
-  line-height: 18px;
-  width: 576px;
-  height: 20px;
-  display: inline-block;
-  border: 1px #e3e3e3 solid; }
-
-.deleteAll {
-  position: absolute;
-  left: 560px;
-  top: 11px;
-  height: 16px;
-  width: 16px;
-  background: url(../images/clear.png) center center no-repeat; }
-
-.s-logo {
-  text-align: center; }
-
-.sorry {
-  text-align: center;
-  color: #333;
-  margin: 30px 0 60px 0;
-  line-height: 1;
-  font-size: 20px; }
-
-.spec {
-  font-size: 21px;
-  font-family: "仿宋" "宋体"; }
+@charset "UTF-8";a,img,input{border:none}.mask,.wrapper,body{min-height:100%}.header,.login-method p,.login-title-p,.s-logo,.search-form,.sorry{text-align:center}body{font:16px/1.5 "Hiragino Sans GB","Helvetica Neue",Helvetica,"Microsoft Yahei",heiti,Arial,sans-serif;color:#14191e;position:relative}body,dd,div,dl,form,h1,h2,h3,h4,h5,h6,input,li,ol,p,table,textarea,ul{margin:0;padding:0}li,ul{list-style:none}img{vertical-align:middle;display:inline-block}a{text-decoration:none}input{outline:0}input::-webkit-input-placeholder{font-size:16px;font-family:"Hiragino Sans GB","Helvetica Neue",Helvetica,"Microsoft Yahei",heiti,Arial,sans-serif;line-height:20px}input:-moz-placeholder{font-size:16px;font-family:"Hiragino Sans GB","Helvetica Neue",Helvetica,"Microsoft Yahei",heiti,Arial,sans-serif;line-height:19px}input::-moz-placeholder{font-size:16px;font-family:"Hiragino Sans GB","Helvetica Neue",Helvetica,"Microsoft Yahei",heiti,Arial,sans-serif;line-height:19px}input:-ms-input-placeholder{font-size:16px;font-family:"Hiragino Sans GB","Helvetica Neue",Helvetica,"Microsoft Yahei",heiti,Arial,sans-serif;line-height:normal}.clearfix:after{content:"";display:table;clear:both}.f-l{float:left}.f-r{float:right}.disnone{display:none}.disblk{display:block}@media (min-width:0px){.loading{position:relative}.loading:after{content:"";position:absolute;width:20px;height:20px;border:2px solid #ccc;border-left:2px red solid;left:50%;top:50%;margin:-12px 0 0 -12px;border-radius:50%;z-index:-1;-webkit-animation:loading .7s linear infinite;animation:loading .7s linear infinite;display:none\9\0}}.login-box,.login-close,.login-method,.mask{position:absolute}@-webkit-keyframes loading{from{-webkit-transform:rotate(0)}to{-webkit-transform:rotate(359deg)}}@keyframes loading{from{-webkit-transform:rotate(0);transform:rotate(0)}to{-webkit-transform:rotate(359deg);transform:rotate(359deg)}}.mask{background:#000;filter:alpha(opacity=50);opacity:.5;z-index:9999999;width:100%;left:0;top:0}.login-box{border-radius:3px;width:800px;background:#fff;z-index:10000000;left:50%;top:-401px;margin-left:-400px;height:400px}.login-title-p{border-bottom:1px solid #eee;line-height:60px;height:60px;font-size:16px}.login-close{height:24px;width:24px;background:url(../images/close.png) center center no-repeat;top:24px;right:30px;-webkit-transition:.3s;transition:.3s}.login-method-container{height:340px;background:#fff;position:absolute;width:100%}.login-close:hover{-webkit-transform:rotate(180deg);-ms-transform:rotate(180deg);transform:rotate(180deg)}.login-method{top:40px}.left{left:125px}.right{right:125px}.login-method p{margin-top:20px;color:#999}::-moz-selection{background:#ff0014;color:#fff}::-webkit-selection{background:#ff0014;color:#fff}::selection{background:#ff0014;color:#fff}.header-box ul.login{visibility:hidden}html{height:100%}body{background:#FBFBFB}@media (min-width:0px){.search-input{font-family:"Hiragino Sans GB","Helvetica Neue",Helvetica,"Microsoft Yahei",heiti,Arial,sans-serif;padding:10px 37px 10px 7px;font-size:16px;height:18px;line-height:18px;width:500px;-ms-box-shadow:0 1px 3px rgba(0,0,0,.2);-o-box-shadow:0 1px 3px rgba(0,0,0,.2);box-shadow:0 1px 3px rgba(0,0,0,.2);display:inline-block}}.wrapper{width:100%;position:relative}.header{background:rgba(0,0,0,.8);height:50px;line-height:50px;min-width:1200px}@media \0screen\,screen\9{.header{background:#000;filter:alpha(opacity=80)}}.header a{color:#fff;display:block;width:100%;height:100%;font-size:14px}.category,.down-app,.index{width:80px;height:48px}li.current-page:hover{background-color:#363c41;height:48px;-webkit-transition:all .2s ease-in-out;transition:all .2s ease-in-out}.category:hover,.down-app:hover,.index:hover,.login:hover{background-color:#363c41;height:50px;-webkit-transition:all .2s ease-in-out;transition:all .2s ease-in-out}.header-box li.category,.header-box li.down-app{margin-left:0}.down-app{width:80px;padding-left:15px;position:relative}.header-app-icon{position:absolute;left:7px;top:17px;display:inline-block;width:11px;height:16px;background:url(../images/head-app-icon.png) no-repeat;vertical-align:-3px;transition:.3s;-moz-transition:.3s;-webkit-transition:.3s;-o-transition:.3s}.down-app:hover .header-app-icon{background:url(../images/head-app-icon.png) 0 -16px no-repeat}.current-page{border-bottom:2px #e60012 solid;background:#000}.header-box{width:1200px;margin:0 auto;height:100%}.header-box .f-l{margin-left:10px}.login{position:relative;width:110px;height:100%}.login-title{position:absolute;left:10px}.login .face{padding-top:12px;margin-right:10px;position:absolute;right:20px}.login .face a{width:26px;height:26px;border-radius:50%;background:url(../images/def-user.png) center center no-repeat;background-size:26px 26px}.login:hover .person-state-list{filter:alpha(opacity=100);opacity:1}.login:hover .person-state-list-container,.person-state-list{display:block;filter:alpha(opacity=100);opacity:1}.person-state-list-container{position:absolute;top:50px;left:0;background-color:#363c41;width:110px;height:60px;display:none}.person-state-list{position:absolute;z-index:3;height:100%;width:100%;line-height:30px;font-size:12px;filter:alpha(opacity=0);opacity:0;-webkit-transition:all .4s ease-in-out;transition:all .4s ease-in-out}.person-state-list li{text-align:center;height:30px}.person-state-list li:hover a{background:#000}.search-area{margin-top:100px}.search-box{width:620px;margin:0 auto}.search-form{position:relative}.btn,.deleteAll{position:absolute}.btn{height:36px;width:36px;right:2px;top:2px;border-radius:3px;background:url(../images/search.png) center center no-repeat #e60012;background-size:20px 20px;cursor:pointer}.search-input{padding:10px 37px 10px 7px;line-height:18px;width:576px;height:20px;display:inline-block;border:1px solid #e3e3e3}.deleteAll{left:560px;top:11px;height:16px;width:16px;background:url(../images/clear.png) center center no-repeat}.sorry{color:#333;margin:30px 0 60px;line-height:1;font-size:20px}.spec{font-size:21px;font-family:"仿宋" "宋体"}
