--- a/dd/sass/index.scss
+++ b/dd/sass/index.scss
@@ -504,9 +504,10 @@ li.current-page:hover{
   vertical-align: middle;
 }
 .pagination-container .item{
-  height: 24px;
-  width: 24px;
-  line-height: 24px;
+  padding:0 3px;
+  min-height: 22px;
+  min-width: 18px;
+  line-height: 22px;
 }
 
 .pagination-container .pagination-previous{
