--- a/dd/sass/_common.scss
+++ b/dd/sass/_common.scss
@@ -29,9 +29,7 @@ $fontFamily:"Hiragino Sans GB", "Helvetica Neue", Helvetica, "Microsoft Yahei", 
   -o-transform: $value;
   transform: $value;
 }
-body{font: 16px/1.5 $fontFamily;color: #14191e;
-// 为了防止登录框弹出遮罩层的高度没有占据100%，让mask相对于body定位
-  position:relative;}
+body{font: 16px/1.5 $fontFamily;color: #14191e;}
 body,div,p,ul,li,form,input,h1,h2,h3,h4,h5,h6,table,dl,dd,textarea,ol{margin:0;padding:0;}
 ul,li{list-style:none;}
 img{vertical-align: middle;border:none;display:inline-block;}
